--- a/angular.json
+++ b/angular.json
@@ -53,6 +53,9 @@
               "src/assets"
             ],
             "styles": [
+              "node_modules/modern-normalize/modern-normalize.css",
+              "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
+              "node_modules/primeng/resources/primeng.min.css",
               "src/styles.css"
             ],
             "scripts": []
